Fix: manejo de rutas de archivos en la clase Shape y actualización de pruebas en PerimeterCalculator